[project]
name = "project-northwind-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "Durso",email = "dursoarthur@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.1"
dependencies = [
    "dbt-postgres (>=1.10.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
